--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -1,4 +1,11 @@
-<form>
+<div>
+  <select>
+    <option *ngFor="let state of states">
+      {{state}}
+    </option>
+  </select>
+</div>
+<!-- <form>
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="inputEmail4">Email</label>
@@ -43,4 +50,4 @@
     </div>
   </div>
   <button type="submit" class="btn btn-primary">Sign in</button>
-</form>
+</form> -->
